# mnprotobuf

./: COPYING  README.md  configure.ac  do-it  setup-env
port/: Makefile.in  distinfo  pkg-descr
src/: Makefile.am  diag.txt  mnpbc-main.c  mnpbc.h  mnpbcc.c  mnpbcg.y  mnpbcl.l  mnpbcscan.c  mnprotobuf.c  mnprotobuf.h  mnprotobuf_private.h  mrkpbc-main.c  mrkpbc.h  mrkpbcc.c  mrkpbcg.y  mrkpbcl.l  mrkpbcscan.c  mrkprotobuf.c  mrkprotobuf.h  mrkprotobuf_private.h
test/: Makefile.am  test-partial-01.c  test-partial-02.c  test-scalar-01.c  test-scalar-02.c  test-scalar-03.c  test-scalar-04.c  test-vector-01.c  testfoo.c
test/data/: partial-01.proto  partial-02.proto  scalar-01.proto  scalar-02.proto  scalar-03.proto  scalar-04.proto  vector-01.proto
